2001-12-24  Jody Goldberg <jody@gnome.org>

	* src/gnumeric.h : define G_OBJECT_GET_CLASS to simplify porting to 2.0

	For Yukihiro Nakai  <nakai@gnome.gr.jp>
	* src/stf-parse.c (stf_parse_is_valid_data) : check for multi-byte
	  before using locale specific isprint.

2001-12-24  Jody Goldberg <jody@gnome.org>

	* src/style-condition.c (style_condition_expr_eval) : mark as needing
	  a recalc, don't just assert it.

	* src/workbook-edit.c (wbcg_edit_validate) : handle accept/reject/reedit
	  Generate the title and msg here.  The goal is to move the gui
	  specific aspects out of here.
	(wbcg_edit_finish) : ditto.

	* src/gui-validation.c (validation_generate_msg) : disable for now.
	  It is a nice idea, but the implementation is in the wrong place
	  and blows goats.

2001-12-23  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_view_freeze_panes) : changing the
	  pane freeze state stops object editing.

	* src/sheet-autofill.c (sheet_autofill_dir) : add some very special
	  purpose code to clip the bounds of autofilled arrays that are being
	  clipped when filling a non-integer multiple of the original block
	  size.

	* src/expr.c (expr_tree_new_array) : reorder args to match the rest of
	  the app.

2001-12-22  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_edit_fill_autofill) : range_trim does
	  not handle merges,  once we've trimmed things down we need to expand
	  back out to include merges in the src region.

	* src/sheet-autofill.c (autofill_cell) : 1st half of a patch to handle
	  non-integer copies of arrays.
	(sheet_autofill_dir) : ditto.

	* src/item-cursor.c (item_cursor_setup_auto_fill) : restrict autofills
	  to contain an integer number of copies if the src region contains
	  merges.
	(cb_autofill_scroll) : ditto.

2001-12-21  Andreas J. Guelzow  <aguelzow@taliesin.ca>
	
	http://bugzilla.gnome.org/show_bug.cgi?id=67298
	* src/commands.c (cmd_paste_copy) : let single merged target behave
	  like single cell
