@@ -1,5 +1,9 @@
 2001-12-24  Jody Goldberg <jody@gnome.org>
 
+	* src/gui-util.c (gnumeric_toolbar_new) : delete the old basicly
+	  useless class and move the relevant convenience routines here.
+	(gnumeric_toolbar_get_widget) : ditto.
+
 	* src/gnumeric.h : define G_OBJECT_GET_CLASS to simplify porting to 2.0
 
 	For Yukihiro Nakai  <nakai@gnome.gr.jp>
