@@ -8,8 +8,6 @@ INCLUDES = 						\
 noinst_LIBRARIES = libwidgets.a
 
 libwidgets_a_SOURCES =				\
-	gnumeric-toolbar.c			\
-	gnumeric-toolbar.h			\
 	gnumeric-vscrollbar.c			\
 	gnumeric-vscrollbar.h			\
 	gnumeric-hscrollbar.c			\
